# LiveCloser

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: 01-backend-refactoring.md  02-frontend-refactoring.md  03-data-layer-refactoring.md
frontend/: .env.example  .gitignore  README.md  app-config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/(workspace)/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/kb/: page.tsx
frontend/app/products/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/agents-ui/: agent-audio-visualizer-aura.tsx  agent-chat-transcript.tsx  agent-control-bar.tsx  (+1 more)
frontend/hooks/: useConversationMessages.ts  useConversations.ts  useKbFileEditor.ts  useKnowledgeBaseDetails.ts  useKnowledgeBases.ts  useProducts.ts
frontend/lib/: api.ts  proxy.ts  utils.ts
frontend/styles/: globals.css
frontend/types/: conversation.ts  index.ts  knowledge-base.ts  product.ts  profile.ts
knowledge/: faq.md  products.json
scripts/: dev.sh
src/: agent.py  kb_server.py  kb_server_schemas.py
src/kb_server_routes/: __init__.py  chat.py  knowledge.py  products.py  profiles.py  runtime.py
src/livekit_sales_agent/: __init__.py  config.py  defaults.py  kb.py  kb_client.py  prompts.py  voice.py
src/livekit_sales_agent_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent_idle.py  test_agent_profiles.py  test_chat_model_settings.py  test_conversation_context.py  test_kb.py  test_kb_categories.py  test_products.py
(+70 files in other folders)
