[project]
name = "livekit-sales-agent-mvp"
version = "0.1.0"
description = "Minimal LiveKit Agents sales assistant with a local knowledge base."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "chromadb>=0.5.23",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "livekit-agents[openai,silero]~=1.5",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.32.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
